Separate Autofill.CreditCardInfoBar into .Local and .Server histograms.  Deprecate the original Autofill.CreditCardInfoBar histogram at the same time, since all traffic should go to one of the two sub-histograms.

BUG=654747
TEST=AutofillSaveCardInfoBarDelegateMobileTest (unit_tests_apk)

Review-Url: https://chromiumcodereview.appspot.com/2434543003
Cr-Commit-Position: refs/heads/master@{#426550}

Former-commit-id: 89f4c2373a8b7a4fa4f7029b34b4e1e8f3a2ad83